# kitchensync

./: .gitignore  BABYSIT.md  DESIGN.md  HOW2EXE.md  MAIN_PROMPT.md  README.md  SPECIFICATION.md  ZIG_CODE_GUIDELINES.md  ZIG_TESTING.md  _FINAL.flag  build.zig  report.txt
code/: Cargo.toml  _WriteGlue.hash  build.py  go.mod
code/cmd/kitchensync/: main.go
code/internal/args/: args.go
code/internal/cli/: help.go  parse.go
code/internal/db/: db.go
code/internal/engine/: copy.go  decide.go  types.go  walk.go  watch_sync.go
code/internal/fsutil/: interface.go  local.go  sftp.go
code/internal/fsys/: fsys.go  local.go  sftp.go
code/internal/hash/: hash.go
code/internal/help/: help.go
code/internal/ignore/: ignore.go
code/internal/lock/: lock.go
code/internal/log/: log.go
code/internal/logx/: logx.go
code/internal/peer/: peer.go
code/internal/pool/: pool.go
code/internal/snapshot/: db.go
code/internal/sync/: classify.go  copy.go  decide.go  displace.go  types.go  walk.go
code/internal/timestamp/: timestamp.go
code/internal/ts/: ts.go
code/internal/urlnorm/: urlnorm.go
code/internal/urlutil/: normalize.go
code/internal/watch/: watch.go
code/kitchensync/: CliParser.java  ConnectedPeer.java  EntryInfo.java  Help.java  LocalTransport.java  Logger.java  Main.java  PathExcludes.java  PathUtil.java  Peer.java  PeerArgument.java  PeerConnector.java  PeerModifier.java  PeerUrl.java  ReadToken.java  RunOptions.java  SftpParts.java  SftpPoolTrace.java  SftpTransport.java  SnapshotManager.java  StagedTransferAdapter.java  TimeUtil.java  TransferManager.java  Transport.java  TransportException.java  TreeWalker.java  UrlConfig.java  UrlParser.java  Verbosity.java  WriteToken.java
code/kitchensync/mcp/: Main.java
code/src/: backup.rs  cleanup.rs  cli.rs  config.rs  connection.rs  connection_pool.rs  copy.rs  database.rs  decision.rs  entry.rs  filesystem.rs  hash.rs  help.txt  http_server.rs  ignore.rs  lifecycle.rs  local_fs.rs  local_peer.rs  local_transport.rs  logging.rs  main.rs  path_hash.rs  peer.rs  pool.rs  reconcile.rs  server.rs  sftp_fs.rs  sftp_peer.rs  sftp_transport.rs  snapshot.rs  staging.rs  sync.rs  sync_engine.rs  syncignore.rs  timestamp.rs  transfer.rs  transport.rs  url_normalize.rs  walker.rs  watcher.rs  (+1 more)
proj/: ARCHITECTURE.md  Cargo.toml  build-released.py  root-architect-outline.json  root-growth.json
proj/cli/: API.md  ARCHITECTURE.md  SPEC.md  mod.rs
proj/operations/: API.md  ARCHITECTURE.md  SPEC.md  mod.rs
proj/peer/: API.md  ARCHITECTURE.md  SPEC.md  mod.rs
proj/runtime/: API.md  ARCHITECTURE.md  SPEC.md  mod.rs
proj/snapshot/: API.md  ARCHITECTURE.md  SPEC.md  mod.rs
proj/src/: lib.rs  main.rs
proj/subpjx/Cli/: Cargo.toml  SPEC.json  SPEC.md
proj/subpjx/Cli/src/: api.rs  imp.rs
proj/subpjx/Cli/tests/: cli_tests.rs
proj/subpjx/CommandAndOutput/: Cargo.toml  SPEC.json  SPEC.md  architect-outline.json
proj/subpjx/CommandAndOutput/src/: api.rs  imp.rs
proj/subpjx/CommandAndOutput/tests/: commandandoutput_tests.rs
proj/subpjx/CommandLine/: Cargo.toml  SPEC.json  SPEC.md
proj/subpjx/CommandLine/src/: api.rs  imp.rs
proj/subpjx/CommandLine/tests/: commandline_tests.rs
proj/subpjx/CopyQueue/: Cargo.toml  SPEC.json  SPEC.md  architect-outline.json
proj/subpjx/CopyQueue/src/: api.rs  imp.rs
proj/subpjx/CopyQueue/tests/: copyqueue_tests.rs
proj/subpjx/CopyStaging/: Cargo.toml  SPEC.json  SPEC.md
proj/subpjx/CopyStaging/src/: api.rs  imp.rs
proj/subpjx/CopyStaging/tests/: copystaging_tests.rs
proj/subpjx/DryRunMode/: Cargo.toml  SPEC.json  SPEC.md
proj/subpjx/DryRunMode/src/: api.rs  imp.rs
proj/subpjx/DryRunPolicy/: Cargo.toml  SPEC.json  SPEC.md
proj/subpjx/FormatRules/: Cargo.toml  SPEC.json  SPEC.md
proj/subpjx/LocalTransport/: Cargo.toml  SPEC.json  SPEC.md
proj/subpjx/Output/: Cargo.toml  SPEC.json  SPEC.md
proj/subpjx/PeerConnections/: Cargo.toml  SPEC.json  SPEC.md  architect-outline.json
proj/subpjx/PeerTransportSurface/: Cargo.toml  SPEC.json  SPEC.md
proj/subpjx/RunController/: Cargo.toml  SPEC.json  SPEC.md
proj/subpjx/SftpTransport/: Cargo.toml  SPEC.json  SPEC.md
proj/subpjx/Snapshot/: Cargo.toml  SPEC.json  SPEC.md  architect-outline.json
proj/subpjx/SnapshotDatabase/: Cargo.toml  SPEC.json  SPEC.md
proj/subpjx/SnapshotStore/: Cargo.toml  SPEC.json  SPEC.md  architect-outline.json
proj/subpjx/StagingRecovery/: Cargo.toml  SPEC.json  SPEC.md  architect-outline.json
proj/subpjx/SyncEngine/: Cargo.toml  SPEC.json  SPEC.md  architect-outline.json
proj/subpjx/SyncTraversal/: Cargo.toml  SPEC.json  SPEC.md
proj/subpjx/Transport/: Cargo.toml  SPEC.json  SPEC.md  architect-outline.json
proj/subpjx/TransportOperations/: Cargo.toml  SPEC.json  SPEC.md  architect-outline.json
proj/subpjx/TreeSyncPlanner/: Cargo.toml  SPEC.json  SPEC.md  architect-outline.json
proj/sync/: API.md  ARCHITECTURE.md  SPEC.md  mod.rs
proj/sync/classify/: API.md  ARCHITECTURE.md  SPEC.md  mod.rs
proj/sync/decision/: API.md  ARCHITECTURE.md  SPEC.md  mod.rs
proj/sync/dispatch/: API.md  ARCHITECTURE.md  SPEC.md  mod.rs
proj/sync/excludes/: API.md  ARCHITECTURE.md  SPEC.md  mod.rs
proj/sync/snapshot_flow/: API.md  ARCHITECTURE.md  SPEC.md  mod.rs
proj/sync/traversal/: API.md  ARCHITECTURE.md  SPEC.md  mod.rs
proj/tests/: classify_module_test.rs  cli_module_test.rs  decision_module_test.rs  dispatch_module_test.rs  excludes_module_test.rs  operations_module_test.rs  peer_module_test.rs  runtime_module_test.rs  snapshot_flow_module_test.rs  snapshot_module_test.rs  sync_module_test.rs  transport_module_test.rs  traversal_boundaries_1_module_test.rs  traversal_boundaries_2_module_test.rs  traversal_errors_1_module_test.rs  traversal_errors_2_module_test.rs  traversal_responsibilities_1_module_test.rs  traversal_responsibilities_2_module_test.rs  traversal_responsibilities_3_module_test.rs  traversal_responsibilities_4_module_test.rs  traversal_responsibilities_5_module_test.rs
proj/transport/: API.md  ARCHITECTURE.md  SPEC.md  mod.rs
(+2099 files in other folders)
