[package]
name = "kitchensync"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
ssh2 = "0.9"
chrono = { version = "0.4", features = ["clock"] }
percent-encoding = "2"
uuid = { version = "1", features = ["v4"] }
filetime = "0.2"
crossbeam-channel = "0.5"

[profile.release]
strip = true
lto = true
