[package]
name = "kitchensync"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
ssh2 = "0.9"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
uuid = { version = "1", features = ["v4"] }
percent-encoding = "2"
chrono = "0.4"
async-trait = "0.1"
filetime = "0.2"

[profile.release]
strip = true
lto = true
