[package]
name = "kitchensync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
ssh2 = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
filetime = "0.2"
ignore = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
