[package]
name = "kitchensync"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
filetime = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
ssh2 = "0.9"
uuid = { version = "1", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
