[package]
name = "kitchensync"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "kitchensync"
path = "src/main.rs"

[dependencies]
commandline = { path = "subpjx/CommandLine" }
copystaging = { path = "subpjx/CopyStaging" }
formatrules = { path = "subpjx/FormatRules" }
peerconnections = { path = "subpjx/PeerConnections" }
peertransportsurface = { path = "subpjx/PeerTransportSurface" }
snapshotdatabase = { path = "subpjx/SnapshotDatabase" }
synctraversal = { path = "subpjx/SyncTraversal" }

[workspace]
resolver = "2"
exclude = ["subpjx"]
