[package]
name = "peerconnections"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
"peerconnections_fileurlconnection" = { path = "subpjx/FileUrlConnection" }
"peerconnections_sftpurlconnection" = { path = "subpjx/SftpUrlConnection" }
"peerconnections_startupcoordinator" = { path = "subpjx/StartupCoordinator" }
"ssh2" = "0.9.5"
