[package]
name = "snapshot"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
"transport" = { path = "../Transport" }
"snapshot_clock" = { path = "subpjx/Clock" }
"snapshot_identity" = { path = "subpjx/Identity" }
"snapshot_store" = { path = "subpjx/Store" }
"snapshot_transfer" = { path = "subpjx/Transfer" }
"rusqlite" = "0.31.0"
