[package]
name = "snapshotstore"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
"snapshotstore_snapshotdatabase" = { path = "subpjx/SnapshotDatabase" }
"snapshotstore_snapshotidentity" = { path = "subpjx/SnapshotIdentity" }
"snapshotstore_snapshotpeerfiles" = { path = "subpjx/SnapshotPeerFiles" }
"rusqlite" = "0.32.1"
"xxhash-rust" = "0.8.12"

[dev-dependencies]
"snapshotstore_snapshotdatabase_snapshotcleanup" = { path = "subpjx/SnapshotDatabase/subpjx/SnapshotCleanup" }
"snapshotstore_snapshotdatabase_snapshotfile" = { path = "subpjx/SnapshotDatabase/subpjx/SnapshotFile" }
"snapshotstore_snapshotdatabase_snapshotrows" = { path = "subpjx/SnapshotDatabase/subpjx/SnapshotRows" }
