[package]
name = "treesyncplanner"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
"treesyncplanner_directoryoutcomes" = { path = "subpjx/DirectoryOutcomes" }
"treesyncplanner_fileoutcomes" = { path = "subpjx/FileOutcomes" }
"treesyncplanner_peerrunroles" = { path = "subpjx/PeerRunRoles" }
"treesyncplanner_treetraversal" = { path = "subpjx/TreeTraversal" }
"treesyncplanner_typeconflictoutcomes" = { path = "subpjx/TypeConflictOutcomes" }

[dev-dependencies]
"treesyncplanner_fileoutcomes_groupfiledecision" = { path = "subpjx/FileOutcomes/subpjx/GroupFileDecision" }
"treesyncplanner_fileoutcomes_peerfileclassification" = { path = "subpjx/FileOutcomes/subpjx/PeerFileClassification" }
"treesyncplanner_treetraversal_excludedpathfilter" = { path = "subpjx/TreeTraversal/subpjx/ExcludedPathFilter" }
"treesyncplanner_treetraversal_livedirectorywalk" = { path = "subpjx/TreeTraversal/subpjx/LiveDirectoryWalk" }
