[package]
name = "snapshotstore_snapshotdatabase"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
"snapshotstore_snapshotdatabase_snapshotcleanup" = { path = "subpjx/SnapshotCleanup" }
"snapshotstore_snapshotdatabase_snapshotfile" = { path = "subpjx/SnapshotFile" }
"snapshotstore_snapshotdatabase_snapshotrows" = { path = "subpjx/SnapshotRows" }
"rusqlite" = "0.32.1"
