[package]
name = "snapshotstore_snapshotpeerfiles"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
"snapshotstore_snapshotdatabase" = { path = "../SnapshotDatabase" }

[dev-dependencies]
"snapshotstore_snapshotdatabase_snapshotcleanup" = { path = "../SnapshotDatabase/subpjx/SnapshotCleanup" }
"snapshotstore_snapshotdatabase_snapshotfile" = { path = "../SnapshotDatabase/subpjx/SnapshotFile" }
"snapshotstore_snapshotdatabase_snapshotrows" = { path = "../SnapshotDatabase/subpjx/SnapshotRows" }
